feat: on created report return realtive link
