# backend/src/main/java/com/mav/buildscale/controller/ReportController.java
@@ -1,7 +1,6 @@
 package com.mav.buildscale.controller;
 
 import com.mav.buildscale.api.ReportsApi;
-import com.mav.buildscale.api.model.AddReport201Response;
 import com.mav.buildscale.api.model.ReportDto;
 import com.mav.buildscale.api.model.ReportListDto;
 import com.mav.buildscale.mapper.ReportMapper;
@@ -10,13 +9,13 @@ import com.mav.buildscale.repository.ReportRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
-import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.net.URI;
 import java.util.List;
 
 @RestController
@@ -29,10 +28,10 @@ public class ReportController implements ReportsApi {
 
     @Override
     public ResponseEntity<ReportListDto> getReports(final Integer page, final Integer size, final List<String> sort) {
-        PageRequest pageRequest = PageRequest.of(page, size);
+        final PageRequest pageRequest = PageRequest.of(page, size);
         pageRequest.withSort(Sort.sort(Report.class).by(Report::getCreated).descending());
 
-        Page<Report> result = reportRepository.findAll(pageRequest);
+        final Page<Report> result = reportRepository.findAll(pageRequest);
         return ResponseEntity.ok(new ReportListDto()
                 .totalElements(result.getTotalElements())
                 .totalPages(result.getTotalPages())
@@ -41,11 +40,14 @@ public class ReportController implements ReportsApi {
 
     @Override
     @Transactional
-    public ResponseEntity<AddReport201Response> addReport(final ReportDto reportDto) {
+    public ResponseEntity<Void> addReport(final ReportDto reportDto) {
         final Report report = reportRepository.save(reportMapper.mapReportDtoToReportDo(reportDto));
-        return ResponseEntity
-                .status(HttpStatus.CREATED)
-                .body(new AddReport201Response().id(report.getOid()));
+
+        final URI uri = ServletUriComponentsBuilder.fromCurrentRequest()
+                .path("/v1/reports/{reportId}")
+                .buildAndExpand(report.getOid())
+                .toUri();
+        return ResponseEntity.created(uri).build();
     }
 
     @Override
