# backend/src/main/resources/api.yaml
@@ -40,18 +40,12 @@ paths:
       responses:
         '201':
           description: Report created
-          content:
-            application/json:
+          headers:
+            Location:
+              required: true
               schema:
-                type: object
-                properties:
-                  id:
-                    $ref: '#/components/schemas/ReportId'
-          links:
-            GetReportById:
-              operationId: getReportById
-              parameters:
-                userId: '$response.body#/id'
+                type: string
+                format: url
         default:
           description: Unexpected error
           content:
